[fix] Fixed alignment of RADIUS Session text

--- a/openwisp_radius/integrations/monitoring/static/radius-monitoring/css/device-change.css
+++ b/openwisp_radius/integrations/monitoring/static/radius-monitoring/css/device-change.css
@@ -13,7 +13,8 @@
   width: 4em;
   height: 4em;
 }
-#device-radius-sessions-table thead th {
+#device-radius-sessions-table thead th,
+#device-radius-sessions-table tbody td {
   text-align: center;
 }
 #radius-session-tbody strong {
